Fix: responsive text align center when screen reduce to size

--- a/Coffee_backery_Code/css/style.css
+++ b/Coffee_backery_Code/css/style.css
@@ -575,5 +575,6 @@ footer{
 
   .footer-section div *{
     justify-content: center;
+    text-align: center;
   }
 }
